error_templates/java/test_files/public_class_filename_mismatch_error/test.txt
template: "Java.PublicClassFilenameMismatchError"
---
Wrong.java:1: error: class Right is public, should be declared in a file named Right.java
    public class Right {
            ^
    1 error
===
template: "Java.PublicClassFilenameMismatchError"
---
# PublicClassFilenameMismatchError
This error occurs because the name of the Java file does not match the name of the public class within it.
```
public class Right {
             ^^^^^
    public static void main(String[] args) {

```
## Steps to fix
### 1. Rename your file
Rename the file to "Right.java" to match the class.

### 2. Rename the public class
The filename should match the name of the public class in the file. To resolve this, change the class name to match the filename.
```diff
- public class Right {
+ public class Wrong {
    public static void main(String[] args) {

```
